@@ -18,16 +18,12 @@ so you can use the current manual with old Netpbm code.
 INSTALLING A LOCAL COPY OF DOCUMENTATION
 ----------------------------------------
 
-If accessing the manual on the World Wide Web is not convenient for
-you (for example, if you want to access it from a computer that is not
-always connected to the Internet), just make a local copy of the web
-site files.  An obvious way to do that is just to copy the web site
-with GNU Wget:
+If accessing the manual on the World Wide Web is not convenient for you (for
+example, if you want to access it from a computer that is not always connected
+to the Internet), just make a local copy of the HTML files.
 
-  wget --recursive --relative http://netpbm.sourceforge.net/doc/
-
-However, a somewhat cleaner way is to get the files from the
-Subversion repository using the Subversion client program 'svn':
+You can get the files from the Subversion repository using the Subversion
+client program 'svn':
 
   URL=https://netpbm.svn.sourceforge.net/svnroot/netpbm/userguide
   svn export $URL
@@ -35,11 +31,18 @@ Subversion repository using the Subversion client program 'svn':
 This creates a directory "userguide" in your current directory containing
 all the same files that are on the web site.
 
-And a sometimes more convenient way to get those files from the
-Subversion repository is to get Sourceforge's Viewvc service to make a
-tarball of them:
+And a sometimes more convenient way to get those files from the Subversion
+repository is to get Sourceforge's Viewvc service to make a tarball of them:
 
   wget http://netpbm.svn.sourceforge.net/viewvc/netpbm/userguide.tar.gz?view=tar --output-document=/tmp/userguide.tgz
+
+
+An apparent alternative is just to copy the web site with something like GNU
+Wget.  However, the Sourceforge web server has limitations on how much you can
+download.  In a February 2012 experiment, Sourceforge started refusing HTTP
+requests (with an Internal Server Error indication and a message saying there
+had been too many requests) before all the files could be fetched.
+
 
 
 GETTING COMMAND HELP WITH A "MAN" COMMAND
